    system. So now one can do run: pitrery restore -d '1 hour ago', or
    anything the local date command can parse.

  * New ARCHIVE_OVERWRITE configuration parameter along with -O option
    (do not overwrite) for archive_xlog to check if the target files
    exists before archiving, when set to "no" or -O is on the command
    line.


pitrery 1.10
============

  * Fix issue in restore_xlog not using SSH user and host found in the
    configuration file, thus preventing restore to work out of the
    box.

  * Ensure archive_xlog create the target directory on remote hosts

  * Only purge WAL files when there are some WAL files to remove


pitrery 1.9
===========

  * Do not exit without error when the server is in recovery. This is
    not a consistent behaviour.

  * Improve the speed of the purge of archives WAL files by stopping
    the purge when the limit is reached.

  * Add the -T switch along with the LOG_TIMESTAMP option to prefix
    messages of backup, restore and purge with the date and time.

  * Rename the compression configuration parameters for WAL files to
    avoid confusion :
    * `COMPRESS_BIN` -> `ARCHIVE_COMPRESS_BIN`
    * `COMPRESS_SUFFIX` -> `ARCHIVE_COMPRESS_SUFFIX`
    * `UNCOMPRESS_BIN` -> `ARCHIVE_UNCOMPRESS_BIN`

  * Add the -c and -s switch to archive_xlog and restore_xlog which
    allow to give the (un)compression command and compressed file suffix
    respectively.

  * No longer use command line switch to configure restore_xlog for
    restore_command in restore action. Give a configuration file or
    the full command to use. Thus only -r and -C (changed to give the
    configuration file) remains for archived WAL options.

  * Add the -l switch to pitrery. It lists the configuration files
    inside the default configuration directory.

  * Include all recovery parameters commented out in the recovery.conf
    generated at restore.


pitrery 1.8
===========

  * Exclude temporary locations from backup
